--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
           <artifactId>jakarta.persistence-api</artifactId>
           <version>3.1.0</version>
       </dependency>
+      <dependency>
+          <groupId>javax.enterprise</groupId>
+          <artifactId>cdi-api</artifactId>
+          <version>1.0</version>
+      </dependency>
   </dependencies>
 
   <build>
